test/status-page/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kener
spec:
  replicas: 0
  selector:
    matchLabels:
      app: kener
  template:
    metadata:
      labels:
        app: kener
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: kener
          image: ghcr.io/eed-web-application/eed-accel-webapp-clusters-wide-setup/kener:latest
          imagePullPolicy: IfNotPresent
          envFrom:
            - secretRef:
                name: application-secrets
          env:
            - name: KENER_BASE_PATH
              value: /status
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 100M
            requests:
              cpu: 50m
              memory: 30M
          volumeMounts:
            - name: kener-volume
              mountPath: /config/static
            - name: site-config
              mountPath: /config/site.yaml
              subPath: site.yaml
            - name: monitors-config
              mountPath: /config/monitors.yaml
              subPath: monitors.yaml
      volumes:
        - name: kener-volume
          persistentVolumeClaim:
            claimName: kener-volume
        - name: site-config
          configMap:
            name: kener
            items:
              - key: site.yaml
                path: site.yaml
        - name: monitors-config
          configMap:
            name: kener
            items:
              - key: monitors.yaml
                path: monitors.yaml
      imagePullSecrets:
      - name: gh-secret
