test/status-page/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "accel-webapp-dev.slac.stanford.edu"
    http:
      paths:
      - pathType: Prefix
        path: /status(/|$)(.*)
        backend:
          service:
            name: gatus-service
            port: 
              number: 80
