test/status-page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kener-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: kener
